--- a/FPTBookStore/Views/Book/Create.cshtml
+++ b/FPTBookStore/Views/Book/Create.cshtml
@@ -23,6 +23,7 @@
                 <div class="col-md-12">
                     @Html.EditorFor(model => model.BookName, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.BookName, "", new { @class = "text-danger" })
+                    <p class="text-danger">@ViewBag.Info</p>
                 </div>
             </div>
 
@@ -41,6 +42,7 @@
                 <div class="col-md-12">
                     @Html.EditorFor(model => model.Stock, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Stock, "", new { @class = "text-danger" })
+                    <p class="text-danger">@ViewBag.Stock</p>
                 </div>
             </div>
 
@@ -49,6 +51,7 @@
                 <div class="col-md-12">
                     @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
+                    <p class="text-danger">@ViewBag.Price</p>
                 </div>
             </div>
 
