--- a/FPTBookStore/Views/Book/Edit.cshtml
+++ b/FPTBookStore/Views/Book/Edit.cshtml
@@ -7,7 +7,7 @@
 <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4 side-color">
     <h2>Edit</h2>
 
-    @using (Html.BeginForm())
+    @using (Html.BeginForm("Edit", "Book", FormMethod.Post, new { enctype = "multipart/form-data" }))
     {
         @Html.AntiForgeryToken()
 
@@ -25,13 +25,15 @@
                 <div class="col-md-12">
                     @Html.EditorFor(model => model.BookName, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.BookName, "", new { @class = "text-danger" })
+                    <p class="text-danger">@ViewBag.Info</p>
                 </div>
             </div>
 
             <div class="form-group mt-2">
                 @Html.LabelFor(model => model.Img, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-12">
-                    <input type="file" name="file" id="file" style="width: 100%;" class="form-control" placeholder="@Model.Img" />
+                    @Html.EditorFor(model => model.Img, new { htmlAttributes = new { @class = "form-control", @type="hidden"} })
+                    <input type="file" name="file" id="file" style="width: 100%;" class="form-control" />
                     @Html.ValidationMessageFor(model => model.Img, "", new { @class = "text-danger" })
                 </div>
                 <div class="col-md-6 ml-2">
@@ -44,6 +46,7 @@
                 <div class="col-md-12">
                     @Html.EditorFor(model => model.Stock, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Stock, "", new { @class = "text-danger" })
+                    <p class="text-danger">@ViewBag.Stock</p>
                 </div>
             </div>
 
@@ -52,6 +55,7 @@
                 <div class="col-md-12">
                     @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
+                    <p class="text-danger">@ViewBag.Price</p>
                 </div>
             </div>
 
