--- a/FPTBookStore/Views/Cart/Index.cshtml
+++ b/FPTBookStore/Views/Cart/Index.cshtml
@@ -63,12 +63,12 @@
                         }
                     </tbody>
                 </table>
-                @using (Html.BeginForm())
+                @using (Html.BeginForm("Order","Cart"))
                 {
                         <div class="form-group row total">
                             <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">Total </label>
                             <div class="col-sm-10">
-                                <input type="text" class="form-control form-control-sm" id="colFormLabelSm" readonly value="@ViewBag.Sum">
+                                <input type="number" class="form-control form-control-sm" name="total" id="total" readonly value="@ViewBag.Sum">
                             </div>
                         </div>
                         <div align="center">
