--- a/FPTBookStore/Views/Shared/_Admin.cshtml
+++ b/FPTBookStore/Views/Shared/_Admin.cshtml
@@ -31,7 +31,7 @@
         
         <div class="navbar-nav">
             <div class="nav-item text-nowrap">
-                @Html.ActionLink("Sign Out","Logout","Home",new { @class= "nav-link px-3" })
+                <a class="nav-link px-3" href="@Url.Action("Logout","Home")">Logout</a>
             </div>
         </div>
     </header>
