--- a/FPTBookStore/Views/Shared/_Admin.cshtml
+++ b/FPTBookStore/Views/Shared/_Admin.cshtml
@@ -84,7 +84,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="@Url.Action("Index","Report")">
+                            <a class="nav-link text-white" href="@Url.Action("Report","Admin")">
                                 <span><i class="fa-solid fa-chart-line"></i></span>
                                 Reports
                             </a>
