--- a/FPTBookStore/Views/Home/Details.cshtml
+++ b/FPTBookStore/Views/Home/Details.cshtml
@@ -24,8 +24,8 @@
                     <div class="img-center desc1-left col-md-6 align="center"">
                         <img src="~/Content/images/@Model.Img" class="rounded mx-auto d-block pt-1 pb-1" alt="">
                     </div>
-                    <div class="desc1-right col-md-6 pl-lg-4">
-                        <h2>Name</h2>
+                    <div class="desc1-right col-md-6 pl-lg-4 ml-3">
+                        <h2>@Model.BookName</h2>
                         <div class="row">
                             <div class="col col-sm-5">
                                 <p class="fst-italic">
@@ -45,13 +45,13 @@
                             <div class="row">
                                 @using (Html.BeginForm("AddCart","Cart"))
                                 {
-                                    <div class="col col-sm-6">
+                                    @*<div class="col col-sm-6">
                                          @Html.TextBox("productid", "", new { @class = "form-control", @type = "hidden",@value=Model.BookID}) 
                                          @Html.TextBox("quality", "", new { @class = "form-control", @type = "number" }) 
-                                    </div>
+                                    </div>*@
                                     <div class="col col-sm-6">
                                         @*<button type="submit" class="btn btn-primary"><i class="fa-solid fa-plus"></i> Add to cart</button>*@
-                                        <input type="submit" value="Add to cart" class="btn btn-primary"/>
+                                        @Html.ActionLink("Add to cart", "AddCart", "Cart", new { productid = Model.BookID, quality = 1 }, new { @class = "" })
                                     </div>
                                 }
                             </div>
