--- a/FPTBookStore/Views/Home/Edit.cshtml
+++ b/FPTBookStore/Views/Home/Edit.cshtml
@@ -10,6 +10,9 @@
     </li>
     <li class="breadcrumb-item active">Shop Single</li>
 </ol>
+<div class="mt-2 mb-2 container">
+    @Html.ActionLink("View Order History", "Index", "History", new { }, new { @class = "" })<span class="text-primary"><i class="fa-solid fa-arrow-right"></i></span>
+</div>
 <div class="update-profile">
     <div id="layoutAuthentication">
         <div id="layoutAuthentication_content">
@@ -33,7 +36,7 @@
                                             </div>
                                             <div class="col-md-12 mt-3">
                                                 @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "form-label" })
-                                                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control", placeholder = "RePassword...", type = "password" } })
+                                                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control", placeholder = "RePassword...", type = "password", value=@Model.RePassword } })
                                                 @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
                                             </div>
                                             <div class="col-md-12 mt-3">
