--- a/FPTBookStore/Views/Orderdetail/Index.cshtml
+++ b/FPTBookStore/Views/Orderdetail/Index.cshtml
@@ -38,7 +38,7 @@
                     <tr>
                         <td>@orderdetail.OrderdetailsID</td>
                         <td>@orderdetail.Price</td>
-                        <td><a onclick="return confirm('Are you sure ?')" href="@Url.Action("Delete","Admin",new { id=orderdetail.OrderdetailsID})"><i class="fa-solid fa-trash-can"></i>Delete</a></td>
+                        <td><a onclick="return confirm('Are you sure ?')" href="@Url.Action("Delete","Orderdetail",new { id=orderdetail.OrderdetailsID})"><i class="fa-solid fa-trash-can"></i>Delete</a></td>
                     </tr>
                 }
             </tbody>
