--- a/FPTBookStore/Views/Account/Create.cshtml
+++ b/FPTBookStore/Views/Account/Create.cshtml
@@ -48,7 +48,7 @@
                         <div class="form-group mt-1">
                             @Html.LabelFor(model => model.RePassword, htmlAttributes: new { @class = "control-label col-md-2"})
                             <div class="col-md-12">
-                                @Html.EditorFor(model => model.RePassword, new { htmlAttributes = new { @class = "form-control" }, type="password" })
+                                @Html.EditorFor(model => model.RePassword, new { htmlAttributes = new { @class = "form-control", type = "password" } })
                                 @Html.ValidationMessageFor(model => model.RePassword, "", new { @class = "text-danger" })
                             </div>
                         </div>
