--- a/FPTBookStore/Views/Account/Create.cshtml
+++ b/FPTBookStore/Views/Account/Create.cshtml
@@ -66,7 +66,7 @@
                 <div class="form-group mt-1">
                     @Html.LabelFor(model => model.Tel, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-12">
-                        @Html.EditorFor(model => model.Tel, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.EditorFor(model => model.Tel, new { htmlAttributes = new { @class = "form-control", @type="tel" } })
                         @Html.ValidationMessageFor(model => model.Tel, "", new { @class = "text-danger" })
                     </div>
                 </div>
