--- a/FPTBookStore/Views/Account/Edit.cshtml
+++ b/FPTBookStore/Views/Account/Edit.cshtml
@@ -56,7 +56,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Tel, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-12 mt-2">
-                    @Html.EditorFor(model => model.Tel, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.Tel, new { htmlAttributes = new { @class = "form-control", @type = "tel" } })
                     @Html.ValidationMessageFor(model => model.Tel, "", new { @class = "text-danger" })
                 </div>
             </div>
