--- a/FPTBookStore/Views/Home/Edit.cshtml
+++ b/FPTBookStore/Views/Home/Edit.cshtml
@@ -35,12 +35,12 @@
                                                 @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
                                             </div>
                                             <div class="col-md-12 mt-3">
-                                                @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "form-label"})
-                                                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control", placeholder = "RePassword...", type = "password", value=@Model.RePassword } })
+                                                @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "form-label" })
+                                                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control", placeholder = "RePassword...", type = "password", value = @Model.RePassword } })
                                                 @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
                                             </div>
                                             <div class="col-md-12 mt-3">
-                                                @Html.LabelFor(model => model.RePassword, htmlAttributes: new { @class = "form-label"})
+                                                @Html.LabelFor(model => model.RePassword, htmlAttributes: new { @class = "form-label" })
                                                 @Html.EditorFor(model => model.RePassword, new { htmlAttributes = new { @class = "form-control", placeholder = "RePassword...", type = "password" } })
                                                 @Html.ValidationMessageFor(model => model.RePassword, "", new { @class = "text-danger" })
                                             </div>
@@ -59,15 +59,15 @@
                                                 @Html.EditorFor(model => model.Tel, new { htmlAttributes = new { @class = "form-control", placeholder = "Tel...", type = "tel" } })
                                                 @Html.ValidationMessageFor(model => model.Tel, "", new { @class = "text-danger" })
                                             </div>
-                                    </div>
+                                        </div>
                                         <div class="mt-4 mb-0">
                                             <div class="d-grid">
                                                 <input type="submit" class="btn btn-primary btn-block" value="Update Account">
                                             </div>
-                                            
+
                                         </div>
                                     }
-                                   
+
                                 </div>
                                 <div class="card-footer text-center py-3">
                                 </div>
@@ -83,4 +83,6 @@
         </div>
     </div>
 </div>
-
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
