--- a/FPTBookStore/Views/Home/Edit.cshtml
+++ b/FPTBookStore/Views/Home/Edit.cshtml
@@ -34,16 +34,16 @@
                                                 @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control", placeholder = "Email...", type = "email" } })
                                                 @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
                                             </div>
-                                            <div class="col-md-12 mt-3">
-                                                @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "form-label" })
-                                                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control", placeholder = "RePassword...", type = "password", value = @Model.RePassword } })
+                                            @*<div class="col-md-12 mt-3">*@
+                                                @*@Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "form-label" })*@
+                                                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control", placeholder = "RePassword...", type = "hidden", value = @Model.RePassword } })
                                                 @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
-                                            </div>
-                                            <div class="col-md-12 mt-3">
-                                                @Html.LabelFor(model => model.RePassword, htmlAttributes: new { @class = "form-label" })
-                                                @Html.EditorFor(model => model.RePassword, new { htmlAttributes = new { @class = "form-control", placeholder = "RePassword...", type = "password" } })
+                                            @*</div>*@
+                                            @*<div class="col-md-12 mt-3">*@
+                                                @*@Html.LabelFor(model => model.RePassword, htmlAttributes: new { @class = "form-label" })*@
+                                                @Html.EditorFor(model => model.RePassword, new { htmlAttributes = new { @class = "form-control", placeholder = "RePassword...", type = "hidden" } })
                                                 @Html.ValidationMessageFor(model => model.RePassword, "", new { @class = "text-danger" })
-                                            </div>
+                                            @*</div>*@
                                             <div class="col-12 mt-3">
                                                 @Html.LabelFor(model => model.Fullname, htmlAttributes: new { @class = "form-label" })
                                                 @Html.EditorFor(model => model.Fullname, new { htmlAttributes = new { @class = "form-control", placeholder = "FullName...", type = "text" } })
@@ -70,6 +70,7 @@
 
                                 </div>
                                 <div class="card-footer text-center py-3">
+                                    <div class="small">@Html.ActionLink("Change Password", "ChangePassword", "Home")</div>
                                 </div>
                             </div>
                         </div>
